Added Sign in button

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link type="text/css" rel="stylesheet" href="stylesheet/style.css">
 </head>
    <body>
+       <a href="#" id="sign_in"><strong>Sign in</strong></a>
       <div id="logo">
         <img src="images/google_logo.png">
         <div id="search_bar">
