--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 </head>
    <body>
        <a href="#" id="sign_in"><strong>Sign in</strong></a>
+       <a href="#" id="icon" title="Google Apps">Google Apps</a>
       <div id="logo">
+        <a href="#" class="links" id="images_link">Images</a>
+        <a href="#" class="links" id="gmail_link">Gmail</a>
         <img src="images/google_logo.png">
         <div id="search_bar">
            <form>
