added footer, finished all

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <body>
        <a href="#" id="sign_in"><strong>Sign in</strong></a>
        <a href="#" id="icon" title="Google Apps">Google Apps</a>
-      <div id="logo">
+       <div id="logo">
         <a href="#" class="links" id="images_link">Images</a>
         <a href="#" class="links" id="gmail_link">Gmail</a>
         <img src="images/google_logo.png">
@@ -19,5 +19,17 @@
           </form>
         </div>
      </div>
+     <div id="footer">
+ <span id="left">
+   <a href="#">Advertising</a>
+   <a href="#">Business</a>
+   <a href="#">About</a>
+ </span>
+ <span id="right">
+   <a href="#">Privacy</a>
+   <a href="#">Terms</a>
+   <a href="#">Settings</a>
+ </span>
+</div>
    </body>
 </html>
