debugged main content

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
    <body>
        <a href="#" id="sign_in"><strong>Sign in</strong></a>
        <a href="#" id="icon" title="Google Apps">Google Apps</a>
-       <div id="logo">
-        <a href="#" class="links" id="images_link">Images</a>
-        <a href="#" class="links" id="gmail_link">Gmail</a>
+       <a href="#" class="links" id="images_link">Images</a>
+       <a href="#" class="links" id="gmail_link">Gmail</a>
+       <div id="main">
         <img src="images/google_logo.png">
         <div id="search_bar">
            <form>
